[package]
name = "beatble"
version = "0.1.0"
authors = ["watiko <service@mail.watiko.net>"]
license = "MIT"
edition = "2018"

[dependencies]
bitflags = "2.4.1"
bluster = "0.2.0"
clap = "2.33.3"
crossbeam = "0.8.2"
env_logger = "0.10.1"
eyre = "0.6.9"
futures = "0.3"
log = "0.4.20"
nix = "0.19.1"
thiserror = "1.0.50"
tokio = { version = "0.2", features = ["full"] }
uuid = "0.8.1"

[package.metadata.deb]
depends = "udev, systemd"
assets = [
  ["target/release/beatble", "usr/bin/", "755"],
  ["assets/udev/*", "etc/udev/rules.d/", "644"],
  ["assets/systemd/*", "etc/systemd/system/", "755"],
]
