[package]
name = "beatble"
version = "0.1.0"
authors = ["watiko <service@mail.watiko.net>"]
license = "MIT"
edition = "2021"

[dependencies]
bitflags = "2.5.0"
bluster = "0.2.0"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam = "0.8.4"
env_logger = "0.11.3"
eyre = "0.6.12"
futures = "0.3"
log = "0.4.21"
nix = { version = "0.28.0", features = ["fs", "ioctl"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }

[package.metadata.deb]
depends = "udev, systemd"
assets = [
  ["target/release/beatble", "usr/bin/", "755"],
  ["assets/udev/*", "etc/udev/rules.d/", "644"],
  ["assets/systemd/*", "etc/systemd/system/", "755"],
]
